<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_normal">

            <EditText
                    android:id="@+id/et_search"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/search_bar_height"
                    android:textSize="@dimen/text_small"
                    android:paddingStart="@dimen/padding_normal"
                    android:paddingEnd="@dimen/padding_search_box"
                    android:lines="1"
                    android:singleLine="true"
                    android:imeOptions="actionSearch"
                    android:hint="@string/search_here"
                    android:background="@drawable/search_background"/>

            <ImageView
                    android:id="@+id/iv_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding_small"
                    android:src="@drawable/ic_search"
                    app:layout_constraintEnd_toEndOf="@id/et_search"
                    app:layout_constraintTop_toTopOf="@id/et_search"
                    app:layout_constraintBottom_toBottomOf="@id/et_search"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_normal"
                    android:padding="@dimen/padding_normal"
                    android:background="@drawable/result_background"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/et_search"
                    app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/result_title"
                        android:textSize="@dimen/text_small"
                        app:layout_constraintTop_toTopOf="parent"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_result_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_normal"
                        android:padding="@dimen/padding_normal"
                        android:background="@drawable/search_background"
                        app:layout_constraintTop_toBottomOf="@id/tv_title">

                    <TextView
                            android:id="@+id/tv_result_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_tiny"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_related"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_normal"
                        android:padding="@dimen/padding_normal"
                        android:background="@drawable/search_background"
                        app:layout_constraintTop_toBottomOf="@id/layout_result_amount">

                    <TextView
                            android:id="@+id/tv_related"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_tiny"
                            android:text="@string/related"
                            android:textAllCaps="true"
                            android:textColor="@color/color_pink"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                            android:id="@+id/tv_related_result"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/padding_small"
                            android:textSize="@dimen/text_tiny"
                            app:layout_constraintTop_toBottomOf="@id/tv_related"
                            app:layout_constraintStart_toStartOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_result"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/padding_normal"
                        app:layout_constraintTop_toBottomOf="@id/layout_related"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
