...
            app:layout_constraintTop_toBottomOf="@id/iv_more"
            app:layout_constraintBottom_toTopOf="@id/tv_author"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="1"/>

    <TextView
            android:id="@+id/tv_sentence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_small"
            android:paddingStart="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_small"
            app:layout_constraintTop_toBottomOf="@id/iv_more"
...
